--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-icons": "^5.0.1",
+    "sharp": "^0.33.2",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.4",
     "stripe": "^14.1.0",
